[package]
name = "mistrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}
either = {version="1.13.0", features=["serde"]}
indexmap = {version="2.2.6", features=["serde"]}
mistralrs = {git = "https://github.com/EricLBuehler/mistral.rs.git", features=["metal"]}
anyhow = "1.0.86"
tokio = {version="1.38.0", features=["full"]}
